[gd_scene load_steps=42 format=2]

[ext_resource path="res://Menu/Menu_Assets/game_title.png" type="Texture" id=1]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0004.jpg" type="Texture" id=2]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0006.jpg" type="Texture" id=3]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0008.jpg" type="Texture" id=4]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0010.jpg" type="Texture" id=5]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0015.jpg" type="Texture" id=6]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0002.jpg" type="Texture" id=7]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0017.jpg" type="Texture" id=8]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0005.jpg" type="Texture" id=9]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0007.jpg" type="Texture" id=10]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0000.jpg" type="Texture" id=11]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0003.jpg" type="Texture" id=12]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0009.jpg" type="Texture" id=13]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0011.jpg" type="Texture" id=14]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0013.jpg" type="Texture" id=15]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0016.jpg" type="Texture" id=16]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0018.jpg" type="Texture" id=17]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0019.jpg" type="Texture" id=18]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0020.jpg" type="Texture" id=19]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0021.jpg" type="Texture" id=20]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0023.jpg" type="Texture" id=21]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0025.jpg" type="Texture" id=22]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0026.jpg" type="Texture" id=23]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0027.jpg" type="Texture" id=24]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0012.jpg" type="Texture" id=25]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0028.jpg" type="Texture" id=26]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0001.jpg" type="Texture" id=27]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0014.jpg" type="Texture" id=28]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0022.jpg" type="Texture" id=29]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0024.jpg" type="Texture" id=30]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0031.jpg" type="Texture" id=31]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0030.jpg" type="Texture" id=32]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0032.jpg" type="Texture" id=33]
[ext_resource path="res://Menu/Menu_Assets/Menu_Background-0029.jpg" type="Texture" id=34]
[ext_resource path="res://Menu/Menu_Assets/play_button.png" type="Texture" id=35]
[ext_resource path="res://Menu/Menu_Assets/exit_button.png" type="Texture" id=36]
[ext_resource path="res://Menu/Menu_Assets/option_button.png" type="Texture" id=37]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=38]
[ext_resource path="res://Menu/Menu_Assets/Menu_Track.wav" type="AudioStream" id=39]

[sub_resource type="Animation" id=1]
resource_name = "MenuFadeIn"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("FadeInObject:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("FadeInObject:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("FadeInObject:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("FadeInObject:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 27 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 25 ), ExtResource( 15 ), ExtResource( 28 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 29 ), ExtResource( 21 ), ExtResource( 30 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0677
margin_top = -44.0497
margin_right = -60.0677
margin_bottom = -44.0497
script = ExtResource( 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MenuFadeIn = SubResource( 1 )

[node name="Background" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 13
playing = true

[node name="Title" type="Sprite" parent="."]
position = Vector2( 0, -120 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
margin_left = -114.0
margin_top = -50.0
margin_right = -38.0
margin_bottom = -28.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 35 )
flat = true

[node name="OptionsButton" type="Button" parent="."]
margin_left = -114.0
margin_top = 20.0
margin_right = -38.0
margin_bottom = 43.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 37 )
flat = true

[node name="ExitButton" type="Button" parent="."]
margin_left = -114.0
margin_top = 95.0
margin_right = -38.0
margin_bottom = 117.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 36 )
flat = true

[node name="FadeInObject" type="ColorRect" parent="."]
margin_left = -296.0
margin_top = -195.0
margin_right = 304.0
margin_bottom = 211.0
color = Color( 0, 0, 0, 1 )

[node name="MenuSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 39 )
autoplay = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="OptionsButton" to="." method="_on_OptionsButton_mouse_entered"]
[connection signal="mouse_exited" from="OptionsButton" to="." method="_on_OptionsButton_mouse_exited"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_ExitButton_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
